added textinputwithicon and other fields

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,36 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@400;500&family=Open+Sans:wght@300;400;500;700&family=PT+Sans+Narrow:wght@400;700&family=Poppins:wght@300;400;700&family=Ubuntu:wght@300;400&display=swap');
 
+@layer utilities {
+  .scrollbar::-webkit-scrollbar {
+    width: 15px;
+    height: 20px;
+  }
+
+  .scrollbar::-webkit-scrollbar-track {
+    border-radius: 100vh;
+    background: #f7f4ed;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    background: #e0cbcb;
+    border-radius: 100vh;
+    border: 3px solid #f6f7ed;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb:hover {
+    background: #c0a0b9;
+  }
+}
+
+.rtl-grid {
+  direction: rtl;
+}
+
+.ltr-grid {
+  direction: ltr;
+}
+
 body {
   font-family: 'Poppins', sans-serif;
 }
