optimize code before adding remove functions

--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,10 @@
 
 @layer utilities {
   .scrollbar::-webkit-scrollbar {
-    width: 15px;
-    height: 20px;
+    display: none;
   }
 
-  .scrollbar::-webkit-scrollbar-track {
+  /* .scrollbar::-webkit-scrollbar-track {
     border-radius: 100vh;
     background: #f7f4ed;
   }
@@ -22,7 +21,7 @@
 
   .scrollbar::-webkit-scrollbar-thumb:hover {
     background: #c0a0b9;
-  }
+  } */
 }
 
 .rtl-grid {
