--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Jost:wght@400;500&family=Open+Sans:wght@300;400;500;700&family=PT+Sans+Narrow:wght@400;700&family=Poppins:wght@300;400;700&family=Ubuntu:wght@300;400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 @layer utilities {
   .scrollbar::-webkit-scrollbar {
@@ -30,8 +30,4 @@
 
 .ltr-grid {
   direction: ltr;
-}
-
-body {
-  font-family: 'Poppins', sans-serif;
 }
